[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu.gd" type="Script" id=2]
[ext_resource path="res://Highscore.gd" type="Script" id=3]
[ext_resource path="res://Credits.gd" type="Script" id=4]
[ext_resource path="res://default_theme.tres" type="Theme" id=5]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="Menu" type="Panel"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.4402
margin_top = -8.05631
margin_right = 22.4402
margin_bottom = -8.05627
rect_pivot_offset = Vector2( 1174.87, 469.437 )
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -321.335
margin_top = 65.379
margin_right = 327.054
margin_bottom = 263.379
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHighscore" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 301.566
margin_right = 328.389
margin_bottom = 499.566
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Highscore"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSettings" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 551.181
margin_right = 330.729
margin_bottom = 749.181
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCredits" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -325.339
margin_top = 791.452
margin_right = 332.394
margin_bottom = 989.452
theme = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonQuit" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 441.497
margin_top = 798.061
margin_right = 882.497
margin_bottom = 996.061
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscore" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.33484
margin_right = -1.33484
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Highscore"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -623.414
margin_top = 46.7573
margin_right = 623.586
margin_bottom = 1018.76
bbcode_enabled = true
bbcode_text = "[center]1. Dr. Orian Schneeball
2. Crack Dack
3. Sci BER Muell[/center]"
meta_underlined = false
text = "1. Dr. Orian Schneeball
2. Crack Dack
3. Sci BER Muell"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Highscore"]
margin_left = 1604.81
margin_top = 929.527
margin_right = 1858.81
margin_bottom = 1046.53
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="Highscore"]

[node name="Credits" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Devs" type="Label" parent="Credits"]
margin_left = 115.0
margin_top = 85.0
margin_right = 409.0
margin_bottom = 330.0
text = "Developed by
============
Cradac
Cybermuell
DorianSnowball"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Handles" type="Label" parent="Credits"]
margin_left = 442.527
margin_top = 85.0
margin_right = 891.527
margin_bottom = 330.0
text = "

| @cradmax
| cybermuell@layer8.space
| @DorianSnowball"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="Credits"]
anchor_right = 0.021
anchor_bottom = 0.041
margin_left = 117.0
margin_top = 350.0
margin_right = 821.68
margin_bottom = 450.0
text = "Music & Sound
=============
Lars Austermeier"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Art" type="Label" parent="Credits"]
margin_left = 115.0
margin_top = 515.0
margin_right = 1109.0
margin_bottom = 1004.0
text = "Art
===
\"Pixel Art Dwarf Sprites\" by PixElthen licensed CC-BY 4.0
some modifications were done
https://opengameart.org/content/pixel-art-dwarf-sprites

\"Poof Effect Spritesheet\" by jellyfizh licensed CC0

\"PixelLetters Font\" by GeelynEdits licensed as Freeware

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Credits"]
margin_left = 1604.81
margin_top = 929.527
margin_right = 1858.81
margin_bottom = 1046.53
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
